# arni

./: .env.test.example  .gitignore  .tmp-updated-task.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  WORKFLOW.md  compose.yml  tarpaulin.toml
.beads/: issue-arni-bcq.1.1-description.md  issues.jsonl  metadata.json  push-state.json
.beads/dolt/: config.yaml
.beads/dolt/.dolt/: config.json  sql-server.info
.beads/dolt/.dolt/noms/: manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/.dolt/stats/.dolt/noms/: manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/export-state/: fcb70500fb18a925.json
.cargo/: config.toml
.claude/: CLAUDE.md  QUICKREF.md  settings.json
.claude/commands/: beads-cleanup.md  beads-query.md  beads-workflow.md  cleanup-plan.md  commit.md  handoff.md  ig-evaluate.md  infographics-bestpractices.md  task-execute.md  task-generate.md  test-interpolation.md
.claude/scripts/: beads.sh  create-copilot-log-task.sh  task-execute.sh  task-generate.sh
.claude/skills/: electron-native-modules.md
.github/: pull_request_template.md
.github/workflows/: README.md  ci.yml  release.yml
config/: config.yml.example  connections.yml.example  logging.yml.example
crates/arni/: Cargo.toml
crates/arni-cli/: Cargo.toml
crates/arni-cli/src/: app_config.rs  config.rs  daemon.rs  db.rs  discovery.rs  filter.rs  json_output.rs  logging_config.rs  main.rs  output_formatter.rs
crates/arni-data/: Cargo.toml
crates/arni-data/examples/: README.md  analytics.rs  multi_adapter.rs  quickstart.rs
crates/arni-data/src/: adapter.rs  config.rs  error.rs  export.rs  lib.rs  registry.rs
crates/arni-data/src/adapters/: common.rs  duckdb.rs  mod.rs  mongodb.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs
crates/arni-data/tests/: README.md  duckdb.rs  harness.rs  mongodb.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs
crates/arni-data/tests/common/: containers.rs  mod.rs
crates/arni-logging/: Cargo.toml  README.md
crates/arni-logging/examples/: console_basic.rs  dual_output.rs  file_rotation.rs  structured_logging.rs
crates/arni-logging/src/: config.rs  error.rs  lib.rs
crates/arni-logging/tests/: file_content_json.rs  file_content_text.rs  file_creates_log.rs  guard_flush.rs  invalid_filter.rs  rust_log_override.rs
crates/arni-mcp/: Cargo.toml  README.md
crates/arni-mcp/src/: db.rs  filter.rs  lib.rs  resources.rs  server.rs  types.rs
crates/arni-mcp/tests/: live_db_tests.rs  server_tests.rs  tool_integration_tests.rs
crates/arni/examples/: README.md  analytics.rs  multi_adapter.rs  quickstart.rs  row_mapping.rs
crates/arni/src/: adapter.rs  adapters.rs  config.rs  error.rs  export.rs  lib.rs  output.rs  registry.rs  testing.rs  traits.rs  types.rs
crates/arni/src/adapters/: common.rs  duckdb.rs  mod.rs  mongodb.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs
crates/arni/src/adapters/cloudflare/: d1.rs  http.rs  kv.rs  mod.rs  r2.rs
crates/arni/src/config/: mod.rs
crates/arni/src/traits/: mod.rs
crates/arni/tests/: README.md  cloudflare_d1.rs  cloudflare_kv.rs  cloudflare_r2.rs  duckdb.rs  harness.rs  mongodb.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs
crates/arni/tests/common/: containers.rs  mod.rs
crates/arni/tests/fixtures/: mod.rs
docs/: architecture.md  cloudflare-integration-test-setup.md  cloudflare.md  configuration.md  daemon.md  draft-pr-workflow.md  feature-flags.md  getting-started.md  issue-tracking.md  local-databases.md  mcp.md  release-process.md  rusty-app-analysis.md  testing.md  use-cases.md
docs/examples/: config.toml  config.yaml  mcp.json  node_client.js
examples/: node_client.js
examples/axum-api/: Cargo.toml  README.md
examples/axum-api/src/: main.rs
scripts/: README.md  build.sh  check.sh  clean.sh  clippy.sh  coverage.sh  dev-containers.sh  dev.sh  fmt.sh  init-mongodb.js  init-mssql.sql  init-mysql.sql  init-oracle.sql  init-postgres.sql  test.sh
