[workspace]
resolver = "2"
members = [
    "crates/arni",
    "crates/arni-cli",
    "crates/arni-data",
    "crates/arni-logging",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aaron C. Roberts <aaron@example.com>"]
license = "MIT"
repository = "https://github.com/acroberts16/arni"
rust-version = "1.75"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Data processing
polars = { version = "0.45", features = ["lazy", "parquet", "json"] }

# Database drivers
tokio-postgres = "0.7"
mongodb = "2.8"
oracle = "0.5"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
# TODO: Re-enable duckdb once build issues are resolved (macOS SDK compatibility)
# duckdb = { version = "0.10", features = ["bundled"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "color", "cargo"] }

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Testing
mockall = "0.12"
tempfile = "3.10"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1
