[workspace]
resolver = "2"
members = [
    "crates/arni",
    "crates/arni-cli",
    "crates/arni-logging",
    "crates/arni-mcp",
    "examples/axum-api",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Aaron C. Roberts <aaron@example.com>"]
license = "MIT"
repository = "https://github.com/aaroncroberts/arni"
rust-version = "1.85"

[workspace.dependencies]
# Core async runtime — crates declare only what they need (no "full")
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"

# Data processing
polars = { version = "0.53", features = ["lazy", "parquet", "json"] }

# Database drivers
tokio-postgres = "0.7"
mongodb = "3.5"
oracle = "0.6"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
duckdb = { version = "1.4" }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "color", "cargo"] }

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Testing
mockall = "0.12"
tempfile = "3.26"

[profile.dev]
opt-level = 0
debug = 1                    # Line tables only — faster link, still gives backtraces
split-debuginfo = "unpacked" # macOS: skip dsymutil, leave debug info in .o files

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"              # Smaller binary, faster unwind-free builds

[profile.test]
opt-level = 1
debug = 1                    # Consistent with dev: line tables for test backtraces
split-debuginfo = "unpacked" # macOS: skip dsymutil on test binaries

[profile.bench]
inherits = "release"
debug = 1                    # Retain symbols for profiling
