[package]
name = "arni-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for the Arni multi-database library"

[[bin]]
name = "arni"
path = "src/main.rs"

[features]
# Default: a useful CLI with Postgres + SQLite and DataFrame output.
# Build with --no-default-features to select only what you need.
default = ["postgres", "sqlite", "polars"]

# ── Database pass-through features ─────────────────────────────────────────────
postgres      = ["arni/postgres"]
mysql         = ["arni/mysql"]
sqlite        = ["arni/sqlite"]
mongodb       = ["arni/mongodb"]
mssql         = ["arni/mssql"]
oracle        = ["arni/oracle"]
duckdb        = ["arni/duckdb"]
duckdb-bundled = ["arni/duckdb-bundled"]

# ── DataFrame output support ────────────────────────────────────────────────────
polars = ["arni/polars"]

# Convenience bundles
all-databases = ["postgres", "mysql", "sqlite", "mongodb", "mssql", "oracle", "duckdb"]
full          = ["all-databases", "polars"]

[dependencies]
# Local dependencies
arni = { path = "../arni" }
arni-logging = { path = "../arni-logging" }
arni-mcp = { path = "../arni-mcp" }

# Workspace dependencies
tokio = { workspace = true, features = ["signal", "net", "io-util"] }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# polars available transitively via arni; no direct DataFrame use in CLI

# CLI-specific dependencies
figlet-rs = "0.1"
colored = "3.1"
# polars comes through arni/polars — no direct dep needed
rpassword = "7"
comfy-table = "7"

[dev-dependencies]
tempfile = { workspace = true }
