[package]
name = "arni-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "ansi"] }
tracing-appender = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
