[package]
name = "arni-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for arni — exposes all database operations as AI-callable tools"
keywords = ["mcp", "database", "ai", "claude", "sql"]
categories = ["database"]

[features]
# Default: useful MCP server with the most-common SQL databases.
# Override at build time: cargo build -p arni-mcp --no-default-features --features postgres
default = ["postgres", "sqlite"]

# ── Database pass-through features ─────────────────────────────────────────────
postgres      = ["arni/postgres"]
mysql         = ["arni/mysql"]
sqlite        = ["arni/sqlite"]
mongodb       = ["arni/mongodb"]
mssql         = ["arni/mssql"]
oracle        = ["arni/oracle"]
duckdb        = ["arni/duckdb"]
duckdb-bundled = ["arni/duckdb-bundled"]
cloudflare-d1 = ["arni/cloudflare-d1"]
cloudflare-kv = ["arni/cloudflare-kv"]
cloudflare-r2 = ["arni/cloudflare-r2"]
cloudflare    = ["arni/cloudflare"]
polars        = ["arni/polars"]

# Convenience bundles
all-databases = ["postgres", "mysql", "sqlite", "mongodb", "mssql", "oracle", "duckdb"]
full          = ["all-databases", "polars"]

[dependencies]
# Local
arni = { path = "../arni" }
arni-logging = { path = "../arni-logging" }

# MCP SDK
rmcp = { version = "0.12", features = ["macros", "server"] }

# Async
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
async-trait.workspace = true

# Serialisation + schema generation
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
schemars = { version = "1", features = ["derive"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
