[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"
publish = false
description = "Example: Axum HTTP API backed by arni for unified database access"

[dependencies]
arni = { path = "../../crates/arni", features = ["sqlite"] }
arni-logging = { path = "../../crates/arni-logging" }

axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
